# com_dylanvann_bazel_test

./: BUILD.bazel  WORKSPACE  package.json  tsconfig.json
app/: App.tsx  BUILD.bazel
ui/: BUILD.bazel  index.tsx
utils/: BUILD.bazel
